# materializr

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE-EXCEPTIONS.md  PRIVACY.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: fuzz.yml  linux.yml  macos.yml  windows.yml
android/: .gitignore  README.md  THIRD-PARTY.md  copy-occt-libs.sh
android/app/: build.gradle
android/scripts/: setup-deps.sh
assets/fonts/: FONT-CREDITS.md
docs/: architecture.md  building.md  changelog.md  code_map.md  features.md  getting-started.md  im-touch-ui-plan.md  move-face-loft-within-feature-design.md  release-notes-0.5.2.md  tutorial-video-outline.md  usage.md
ios/: CMakeLists.txt  Info.plist.in
ios/scripts/: setup-deps.sh
metadata/: com.materializr.app.yml
packaging/macos/: build-dmg.sh
packaging/winget/: Materializr.Materializr.installer.yaml  Materializr.Materializr.locale.en-US.yaml  Materializr.Materializr.yaml  README.md
shaders/: mesh.frag
src/: android_files.cpp  android_files.h  android_main.cpp  android_platform.cpp  android_platform.h  android_shims.cpp  eink_mode.h  gl_common.h  gl_shader.cpp  main.cpp  touch_mode.h
src/app/: Application.cpp  Application.h  Application_Dialogs.cpp  Application_InteractiveOps.cpp  Application_TouchShell.cpp  Application_Viewport.cpp  FaceOpControllers.cpp  FaceOpControllers.h  InteractiveOpController.cpp  InteractiveOpController.h  Window.cpp  Window.h  ui_layout_bridge.cpp  ui_layout_bridge.h
src/core/: Document.cpp  Document.h  EventBus.h  Events.h  History.cpp  History.h  Operation.h  SelectionManager.cpp  SelectionManager.h  VersionManager.cpp
src/io/: FileDialogs.cpp  FileDialogs.h  GltfExport.cpp  (+15 more)
tests/: CMakeLists.txt  probe_kernel_matrix.cpp  probe_owns_face.cpp  probe_thread_chunk.cpp  probe_thread_hole.cpp  probe_validity_fuzz.cpp  test_audit_hardening.cpp  test_blend_cut.cpp  test_edgeop_highlight_reload.cpp  test_extrude_regions.cpp  test_face_lineage.cpp  test_full_replay.cpp  test_generative_edges.cpp  test_history.cpp  test_move_hole.cpp  test_operations.cpp  test_pushpull_normal.cpp  test_pushpull_ownsface.cpp  test_pushpull_through.cpp  test_reload_edit.cpp  test_section_cap.cpp  test_shell.cpp  test_sketch_regions.cpp  test_svg_roundtrip.cpp  test_topo_boolean_gen.cpp  test_topo_contract.cpp  test_topo_moveface.cpp  test_topo_thread.cpp
tests/fuzz/: CMakeLists.txt  fuzz_brepio.cpp  fuzz_dxfimport.cpp  fuzz_igesio.cpp  fuzz_projectio_load.cpp  fuzz_projectio_sketchbody.cpp  fuzz_settings_roundtrip.cpp  fuzz_stepio.cpp  fuzz_stlio.cpp  fuzz_svgimport.cpp
tests/fuzz/corpus/fuzz_brepio/: seed-box.brep  seed-malformed-fast.brep  seed-truncated.brep
tests/fuzz/corpus/fuzz_dxfimport/: seed-circle-arc.dxf  seed-line-square.dxf  seed-lwpolyline-bulge.dxf  seed-malformed-numeric.dxf  seed-truncated.dxf
tests/fuzz/corpus/fuzz_igesio/: seed-minimal-box.igs  seed-truncated.igs
tests/fuzz/corpus/fuzz_projectio_load/: seed-empty-v3.mzr  seed-legacy-v2.mzr  seed-single-box.mzr  seed-truncated.mzr  seed-with-history.mzr
tests/fuzz/corpus/fuzz_projectio_sketchbody/: seed-empty.txt  seed-huge-count.txt  seed-line-loop.txt  seed-polygon.txt  seed-spline.txt
tests/fuzz/corpus/fuzz_settings_roundtrip/: seed-control-chars.cfg  seed-defaults.cfg  seed-defaults.json  seed-out-of-range-ints.cfg
tests/fuzz/corpus/fuzz_stepio/: seed-empty-header-only.stp  seed-malformed-numeric.stp  seed-minimal-box.stp  seed-truncated.stp
tests/fuzz/corpus/fuzz_stlio/: seed-ascii-tri.stl  seed-binary-huge-count.stl  seed-binary-tri.stl  seed-truncated.stl
(+180 files in other folders)
